--- a/itemV2.cfg
+++ b/itemV2.cfg
@@ -1,9 +1,38 @@
 title = "Tourney Balance Testing Testing";
-description = "Tourney Balance Testing Testing description";
+description = "Tourney Balance Testing Testing:
+
+This mod is a platform for modders to test balance changes intended for Tourney Balance. To activate, the host must type the '/testing' command.
+
+[h1]Key Features:[/h1]
+
+[b]Widespread Compatibility:[/b]
+All mods featured in Tourney Balance Testing Testing are applied on top of existing balance mods. As such it shouldn't conflict with any existing balance mods. That being said, these changes are aimed towards use with Tourney Balance and as a result, I offer no guarantees with other mods.
+
+[b]Modular Design:[/b]
+Contributing a balance change is as simple as copy pasting a LUA snippet on to a file, and changing the tooltips to indicate to the user what code will be run when selected in the main menu. No balance changes contained in this mod are applied upon loading in to the game.
+
+[b]Automatic Synchronization:[/b]
+The host of a lobby has full control over which balance changes are loaded by clients in the lobby. This allows clients to set their menus to whatever setting they feel like and not have to worry about joining a lobby and crashing. This also enables clients with the mod to connect to games in progress without fear of crashing.
+
+[h1]FAQ[/h1]
+
+[b]How is this supposed to work?[/b]
+The changes featured in this mod are intended to act as a public facing iterative development process geared towards testing and designing balance changes which conform to TB's design ethos. If a modder wants a mod featured on TBTT, they may contact me to have it featured. Once featured the community can playtest these changes and we solicit input from the TB mod balance team and continually make tweaks until the end result is suitable for use in TB. Then, once development is concluded the TB team may accept or reject a balance change. Once a decision is made on this in either direction, the balance change will be removed from TBTT.
+
+[b]No, like how does the MOD work?[/b]
+TBTT has a widget interface which allows the host of the game to select balance changes they wish to execute. And upon typing in the command "/testing" to the chat, different LUA snippets are executed and clients are sent a ping which tells their games to apply the same code to prevent desync. The same as if you were to copy paste them into execute LUA yourself. This however comes with a notable drawback, which is that in order to "un apply" the changes, you must restart your game. However this is a compromise make contributing easy for modders.
+
+[b]I have a cool idea, how can I contribute?[/b]
+Currently I don't have a standardized process, but I'd like one. For now, just contact me and we'll make it happen.
+
+[b]Github:[/b]
+Github repository is located here https://github.com/0sm1um/Tourney-Balance-Testing-Testing
+";
+
 preview = "item_preview.png";
 content = "bundleV2";
 language = "english";
-visibility = "private";
+visibility = "public";
 published_id = 2962436492L;
 apply_for_sanctioned_status = false;
 tags = [ ];
